Ajout des metaTAG

--- a/services.html
+++ b/services.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sysguard - Services IT sécurisés</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Sysguard : solutions professionnelles de sécurité informatique, supervision IT et sauvegarde de données pour protéger votre infrastructure entreprise.">
+    <meta name="keywords" content="sécurité informatique, infogérance, supervision IT, sauvegarde données, cybersécurité">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Sysguard - Services IT">
+    <meta property="og:description" content="Sysguard : solutions professionnelles de sécurité informatique, supervision IT et sauvegarde de données pour protéger votre infrastructure entreprise.">
+    <meta property="og:type" content="website">
 </head>
+<!-- Prêt pour hébergement serveur Sysguard (XAMPP local) -->
 <body>
     <header>
         <h1 class="titre-principal">Sysguard - Solutions de sécurité et d'infogérence</h1>
@@ -17,7 +26,7 @@
         </ul>
     </nav>
     <main>
-        <article id="#securite">
+        <article id="securite">
             <h2>sécurité</h2>
             <p>Nous offrons des solutions complètes pour protéger vos systèmes inform
         </article>
