AJout des liens vers index et services

--- a/services.html
+++ b/services.html
@@ -20,6 +20,7 @@
     </header>
     <nav>
         <ul>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="#securite">sécurité</a></li>
             <li><a href="#supervision">supervision</a></li>
             <li><a href="#sauvegarde">sauvegarde</a></li>
