--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </header>
     <nav>
         <ul>
+            <li><a href="services.html">Services</a></li>
             <li><a href="#securite">sécurité</a></li>
             <li><a href="#supervision">supervision</a></li>
             <li><a href="#sauvegarde">sauvegarde</a></li>
