--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sysguard - Services IT sécurisés</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <!-- SEO Meta Tags -->
     <meta name="description" content="Sysguard : solutions professionnelles de sécurité informatique, supervision IT et sauvegarde de données pour protéger votre infrastructure entreprise.">
     <meta name="keywords" content="sécurité informatique, infogérance, supervision IT, sauvegarde données, cybersécurité">
