--- a/services.html
+++ b/services.html
@@ -28,14 +28,17 @@
     </nav>
     <main>
         <article id="securite">
+            <img src="/images/undraw_security-on_3ykb.png" alt="Illustration de sécurité informatique" style="width:300px;height:auto;">
             <h2>sécurité</h2>
             <p>Nous offrons des solutions complètes pour protéger vos systèmes inform
         </article>
         <article id="supervision">
+            <img src="/images/undraw_app-benchmarks_ls0m.png" alt="Illustration de supervision IT" style="width:300px;height:auto;">
             <h2>supervision</h2>
             <p>Notre service de supervision garantit la surveillance continue de vos infrastructures IT.</p>
         </article>
         <article id="sauvegarde">
+            <img src="/images/undraw_cloud-files_8upc.png" alt="Illustration de sauvegarde de données" style="width:300px;height:auto;">
             <h2>sauvegarde</h2>
             <p>Nous assurons la sauvegarde régulière et sécurisée de vos données critiques.</p>
         </article>
